--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -1,8 +1,10 @@
 header {
   display: flex;
-
+  
   nav {
+    width: 100%;
     display: flex;
+    justify-content: right;
 
     ul {
       display: flex;
