--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -1,8 +1,10 @@
 header {
+  width: 100%;
   display: flex;
-  
+  justify-content: space-between;
+  border: solid red;
+
   nav {
-    width: 100%;
     display: flex;
     justify-content: right;
 
