--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -3,10 +3,18 @@ h1 {
 }
 
 main {
-  color: black;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-size: 2rem;
+  margin-left: 5rem;
+  padding: 2rem;
 
   .greeting {
-    
+    display: flex;
+    flex-direction: column;
+    // padding: 16px;
+
     .hello {
       color: white;
     }
@@ -14,5 +22,10 @@ main {
   .links {
     display: flex;
     gap: 2rem;
+    font-size: 3rem;
+
+    a {
+      display: flex;
+    }
   }
 }
