overengineered hover solution, figured out why css solution wasn't working and adjusted

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -20,12 +20,19 @@ main {
     }
   }
   .links {
+    height: 5rem;
     display: flex;
+    align-items: center;
     gap: 2rem;
-    font-size: 3rem;
+    font-size: 4rem;
 
     a {
       display: flex;
+      align-items: center;
+      padding: 1rem;
+    }
+    .link:hover {
+      background: #000;
     }
   }
 }
