--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,6 +1,6 @@
-h1 {
-  color: black;
-}
+// h1 {
+//   // color: black;
+// }
 
 main {
   display: flex;
@@ -33,6 +33,7 @@ main {
     }
     .link:hover {
       box-shadow: 0 0 3px 0 rgba(0, 0, 0, .5);
+      // transform: scale(1rem, .5rem);
     }
   }
 }
