--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -14,6 +14,14 @@ header {
 
       li {
         list-style-type: none;
+        
+        .link {
+          color: white;
+          text-decoration: none;
+        }
+        .link:hover {
+          box-shadow: 0 0 3px 0 rgba(0, 0, 0, .5);
+        }
       }
     }
   }
