--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,7 +1,31 @@
-h2 {
+.about {
   color: white;
-}
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  margin: 2rem;
+  border-radius: 8px;
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.3);
+  
+  h2 {
+    font-size: 2rem;
+  }
+  .text-left {
+    display: flex;
+    flex-direction: column;
+    
+    .bio {
 
-section {
-  color: white;
+      .text {
+        font-size: 1rem;
+      }
+    }
+    // .skills {
+      
+    //   h3 {
+  
+    //   }
+    // }
+  }
 }
