--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -21,11 +21,18 @@
         font-size: 1rem;
       }
     }
-    // .skills {
+    .skills {
       
-    //   h3 {
+      // h3 {
   
-    //   }
-    // }
+      // }
+      ul {
+        width: auto;
+        display: flex;
+        justify-content: space-around;
+        list-style-type: none;
+        padding: 0;
+      }
+    }
   }
 }
