--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');
 
 html {
-  color: rgb(0, 2, 79);
+  color: white;
   font-family: 'Nunito', sans-serif;
   height: 100%;
   background-repeat: no-repeat;
